<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_post"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_new_post"
        android:shortcutLongLabel="@string/shortcut_new_post_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="space.echelon4.fedispace"
            android:targetClass="space.echelon4.fedispace.MainActivity"
            android:data="fedispace://shortcut/new_post" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="space.echelon4.fedispace"
            android:targetClass="space.echelon4.fedispace.MainActivity"
            android:data="fedispace://shortcut/search" />
    </shortcut>
    <shortcut
        android:shortcutId="messages"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_messages"
        android:shortcutLongLabel="@string/shortcut_messages_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="space.echelon4.fedispace"
            android:targetClass="space.echelon4.fedispace.MainActivity"
            android:data="fedispace://shortcut/messages" />
    </shortcut>
</shortcuts>
